# carbot

./: Dockerfile  DockerfileRedis  DockerfileScheduler  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_03_1244-18127f7e8572_create_new_table.py
bot/: __main__.py  config.py  db.py  examplel.sqlite3
bot/alembic/: env.py
bot/alembic/versions/: 2024_03_02_1755-22ad7d0d66db_crete_new_tables.py
bot/commands/: __init__.py  client.py  clientfsm.py  other.py
bot/common/: __init__.py  bot_cmd_lst.py
bot/db/: __init__.py  crud_user.py  engine.py  models.py  orm_query.py  user_model.py
bot/keyboards/: __init__.py  begin.py  currency_cars.py  type_cars.py
bot/logger_conf/: __init__.py  logger_conf.py
bot/middlewares/: __init__.py  db.py
bot/parsers/: __init__.py  av.py  base_pars.py  kufar.py
bot/scheduler/: scheduler.py
bot/scrapers/: __init__.py  abc_data_class_scraper.py  av.py  kufar.py
