[tool.poetry]
name = "carbot"
version = "0.1.0"
description = ""
authors = ["yakhovets-o <yakhovetso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
requests = "^2.31.0"
aiogram-dialog = "^2.1.0"
aiogram-calendar = "^0.5.0"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
