[tool.poetry]
name = "bot"
version = "1.0.0"
description = ""
authors = ["yakhovets-o <yakhovetso@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
requests = "^2.31.0"
aiogram-dialog = "^2.1.0"
aiogram-calendar = "^0.5.0"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
aioredis = "^2.0.1"
fake-useragent = "^1.4.0"
arq = "^0.25.0"
alembic = "^1.13.1"
black = "^24.2.0"
apscheduler = "^3.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



